[tool.poetry]
name = "hydro-backend"
version = "0.1.0"
description = ""
authors = ["Isai Ramirez <86127102+CodeSwallow@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hydro_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
